# MOOC-Moocfi-Haskell_Functional_Programming

./: .gitignore  README.md
exercices/: README.md
exercices/init/: CHANGELOG.md  README.md  mooc.cabal
exercices/init/src/: Main.hs
exercices/init/test/: Set11aTest.hs  Set13aTest.hs  Set13bTest.hs  Set14aTest.hs  Set16aTest.hs  Set1Test.hs  Set2aTest.hs  Set3bTest.hs  Set4bTest.hs  Set7Test.hs  Set9aTest.hs
exercices/mooc/src/: Set1.hs  Set10a.hs  Set10b.hs  Set11a.hs  Set11b.hs  Set12.hs  Set13a.hs  Set13b.hs  Set14a.hs  Set14b.hs  Set15.hs  Set16a.hs  Set16b.hs  Set2a.hs  Set2b.hs  Set3a.hs  Set3b.hs  Set4a.hs  Set4b.hs  Set5a.hs  Set5b.hs  Set6.hs  Set7.hs  Set8.hs  Set9a.hs  Set9b.hs
exercices/mooc/test/: Set10aTest.hs  Set10bTest.hs  Set11bTest.hs  Set12Test.hs  Set14bTest.hs  Set15Test.hs  Set16bTest.hs  Set2bTest.hs  Set3aTest.hs  Set4aTest.hs  Set5aTest.hs  Set5bTest.hs  Set6Test.hs  Set8Test.hs  Set9bTest.hs
