cabal-version:      3.4
name:               mooc
version:            0.1.0.0

extra-source-files: CHANGELOG.md

executable Mooc

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Main.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , containers==0.6.5.1
                       , array==0.5.4.0
                       , transformers==0.5.6.2
                       , JuicyPixels==3.3.6
                       , http-types==0.12.3
                       , text==1.2.4.1
                       , bytestring==0.10.12.0
                       , wai==3.2.3
                       , warp==3.3.18
                       , sqlite-simple==0.4.18.0

    hs-source-dirs:      src

    other-modules:       Set1
                       , Set2a
                       , Set2b
                       , Set3a
                       , Set3b
                       , Set4a
                       , Set4b
                       , Set5a
                       , Set5b
                       , Set6
                       , Set7
                       , Set8
                       , Set9a
                       , Set9b
                       , Set10a
                       , Set10b
                       , Set11a
                       , Set11b
                       , Set12
                       , Set13a
                       , Set13b
                       , Set14a
                       , Set14b
                       , Set15
                       , Set16a
                       , Set16b
                       , Mooc.Todo
                       , Mooc.LimitedPrelude
                       , Mooc.VeryLimitedPrelude
                       , Examples.Bank
                       , Examples.Phantom
                       , Examples.Validation

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010

test-suite Set1Test

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set1Test.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set1
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set2aTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set2aTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set2a
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set2bTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set2bTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set2b
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set3aTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set3aTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set3a
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set3bTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set3bTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set3b
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set4aTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set4aTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0
                       , containers==0.6.5.1
                       , array==0.5.4.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set4a
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set4bTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set4bTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set4b
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set5aTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set5aTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set5a
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set5bTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set5bTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set5b
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set6Test

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set6Test.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set6
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set7Test

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set7Test.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0
                       , generic-random==1.4.0.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set7
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set8Test

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set8Test.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0
                       , JuicyPixels==3.3.6

    hs-source-dirs:      test
                       , src

    other-modules:       Set8
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set9aTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set9aTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set9a
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set9bTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set9bTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0
                       , containers==0.6.5.1

    hs-source-dirs:      test
                       , src

    other-modules:       Set9b
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set10aTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set10aTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set10a
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set10bTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set10bTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set10b
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set11aTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set11aTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set11a
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set11bTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set11bTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set11b
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set12Test

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set12Test.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set12
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set13aTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set13aTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0
                       , containers==0.6.5.1
                       , transformers==0.5.6.2

    hs-source-dirs:      test
                       , src

    other-modules:       Set13a
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th
                       , Examples.Bank

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set13bTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set13bTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0
                       , containers==0.6.5.1
                       , transformers==0.5.6.2

    hs-source-dirs:      test
                       , src

    other-modules:       Set13b
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th
                       , Examples.Bank

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set14aTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set14aTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0
                       , text==1.2.4.1
                       , bytestring==0.10.12.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set14a
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set14bTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set14bTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0
                       , HTTP==4000.3.16
                       , http-types==0.12.3
                       , text==1.2.4.1
                       , bytestring==0.10.12.0
                       , wai==3.2.3
                       , warp==3.3.18
                       , sqlite-simple==0.4.18.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set14b
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set15Test

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set15Test.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set15
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th
                       , Examples.Validation

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set16aTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set16aTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set16a
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
        

test-suite Set16bTest

    type:                exitcode-stdio-1.0

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Set16bTest.hs

    build-depends:       base==4.14.3.0
                       , QuickCheck==2.14.2
                       , template-haskell==2.16.0.0
                       , deepseq==1.4.4.0
                       , directory==1.3.6.0

    hs-source-dirs:      test
                       , src

    other-modules:       Set16b
                       , Mooc.Todo
                       , Mooc.Test
                       , Mooc.Th
                       , Examples.Phantom

    other-extensions:    OverloadedStrings

    default-language:    Haskell2010

